# PrusaPATuner

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: SETUP-WINDOWS.md
scripts/: bootstrap_sanity.py  check_loadcell.py  diagnose.py  examine_sg.py  npz2xlsx.py  replay_run.py  sniff.py
src/prusa_pa_tuner/: alignment.py  analysis.py  app.py  config.py  export.py  flow_analysis.py  flow_gen.py  flow_runner.py  gcode_gen.py  gcode_parse.py  gcode_preamble.py  livemap_gen.py  livemap_map.py  livemap_runner.py  optimiser.py  probe_analysis.py  probe_gen.py  probe_runner.py  prusalink.py  replay.py  run_lifecycle.py  runner.py  sampling.py  udp_metrics.py
src/prusa_pa_tuner/static/: app.js  index.html  styles.css
tests/: test_analysis.py  test_flow.py  test_frontend_js.py  test_gcode_gen.py  test_indx.py  test_livemap.py  test_livemap_frontend.mjs  test_npz2xlsx.py  test_probe.py  test_replay.py  test_udp_metrics.py
