[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prusa-pa-tuner"
version = "0.1.0"
description = "Automatic Pressure Advance tuner for Prusa CORE One and CORE One INDX"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Stefan Hermann (CNC Kitchen)" }]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["3d-printing", "prusa", "core-one", "core-one-indx", "linear-advance", "pressure-advance", "calibration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "numpy>=1.26",
    "scipy>=1.12",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
package = [
    "pyinstaller>=6.5",
]

[project.scripts]
prusa-pa-tuner = "prusa_pa_tuner.__main__:main"

[project.urls]
Upstream = "https://github.com/CNCKitchen/PrusaPATuner"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prusa_pa_tuner = ["static/*", "templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
